--- a/sunshinewatchface/src/main/res/values/strings.xml
+++ b/sunshinewatchface/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sunshine Watchface</string>
     <string name="my_analog_name">My Analog</string>
     <string name="my_digital_name">My Digital</string>
+    <string name="info_not_available">Info not available!</string>
 </resources>
